--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -38,11 +38,14 @@ android {
 
     defaultConfig {
         // TODO: Specify your own unique Application ID (https://developer.android.com/studio/build/application-id.html).
-        applicationId "com.example.apple_signIn_test"
-        minSdkVersion 16
+        applicationId "test.appleSignInTest.flutter"
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode flutterVersionCode.toInteger()
         versionName flutterVersionName
+        manifestPlaceholders = [
+            'appAuthRedirectScheme': 'test.appleSignInTest.flutter'
+        ]
     }
 
     buildTypes {
