--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,9 @@ dependencies:
     sdk: flutter
   http: ^0.12.2
   sign_in_with_apple: ^2.5.2
+  flutter_appauth: ^0.9.1
+  flutter_secure_storage: ^3.3.3
+  flutter_dotenv: ^2.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -47,7 +50,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
+  assets:
+    - .env
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
